deployments/k8s/microservice2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice2
  labels:
    app: microservice2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice2
  template:
    metadata:
      labels:
        app: microservice2
    spec:
      containers:
      - name: microservice2
        image: hfurkanvural/microservice2
