deployments/k8s/loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-loadbalancer
spec:
  selector:
    app: microservice-trial
  ports:
    - port: 8000
      targetPort: 8080
  type: LoadBalancer
