deployments/k8s/microservice1-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: microservice1
  name: microservice1
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    app: microservice1
