deployments/k8s/microservice2-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: microservice2
  name: microservice2
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    app: microservice2
