deployments/k8s/simple_reverseproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: simple-reverseproxy
  name: simple-reverseproxy
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    app: simple-reverseproxy
  type: LoadBalancer
