deployments/k8s/microservice-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /api/ms1
        pathType: Prefix
        backend:
          serviceName: microservice1
          servicePort: 8080
      - path: /api/ms2
        pathType: Prefix
        backend:
          serviceName: microservice2
          servicePort: 8080
